--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -2,54 +2,7 @@
 <html lang="en">
 {% include "posts/head.html" %}
 <body>
-    <nav class="navbar" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="navbar-brand" href="home.html">Squary</a>
-            </div>
-
-            <div class="collapse navbar-collapse navbar-right">
-                <ul class="nav navbar-nav navbar-right center-block">
-                    <li>
-                        <form class="navbar-form navbar-left" role="search">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-                                        </span>
-                            </div>
-                        </form>
-                    </li>
-
-                    <li>
-                        <form action="create.html">
-                            <input value="Create" type="submit" class="btn btn-success navbar-btn">
-                        </form>
-                    </li>
-
-                    <li>
-                        <img src="{% static 'jpg/k7BF1vsXveY.jpg' %}" alt="Responsive image" class="img-circle center-block">
-                    </li>
-
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Devernua<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="settings.html">Settings</a></li>
-                            <li><a href="logout.html">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div>
-    </nav>
-
+	{% include "posts/hut.html" %}
 
     <div class="container" role="main">
         <div class="row news">
@@ -59,13 +12,13 @@
                 <div class="que">
                     <div class="question-header">
                         <a class="user fleft" href="user.html">
-                            <img src="/media/{{image.author.avatar}}" alt="Devernua" class="img-circle">
+                            <img src="{{image.author.avatar.url}}" alt="Devernua" class="img-circle">
                         </a>
                         <a class="nickname" href="user.html">{{image.author.username}}</a>
                     </div>
 
                     <div class="question-body">
-                        <img src="/media/{{image.img}}" class="photo">
+                        <img src="{{image.img.url}}" class="photo">
 
                         <a class="to-like" href="#">
                             <span  class="glyphicon glyphicon-heart"></span>
