--- a/posts/static/posts/css/my.css
+++ b/posts/static/posts/css/my.css
@@ -33,10 +33,16 @@ span > a{
 	.navbar a{
 		color: #eee;
 	}
-	.navbar-nav >li > img.img-circle{
+
+	.navbar-nav > li > a.userpic{
+		padding: 0;
+	}
+
+	.navbar-nav >li > a.userpic img.img-circle{
 		margin: 5px 0px;
 
 	}
+
 	.navbar-nav > li > a:hover,
 	.navbar-nav > li > a:focus{
 		color: #5cb85c;
@@ -146,7 +152,7 @@ a.to-comment{
 	display: none;
 }
 
-.feed .feed-post .question-header a.user img.img-circle{
+.feed .feed-post .post-header a.user img.img-circle{
 	max-height: 50px;
 }
 .feed-post {
@@ -163,17 +169,17 @@ a.to-comment{
 			    height: auto;
 
 	}
-	.feed-post .question-body{
+	.feed-post .post-body {
 		position: relative;
 	}
 
-	.feed-post .question-body:hover{
+	.feed-post .post-body:hover{
 		transition: opacity .5s ease-out;
 		opacity: 0.7;
 	}
 
-	.feed-post .question-body:hover a.to-like,
-	.feed-post .question-body:hover a.to-comment{
+	.feed-post .post-body:hover a.to-like,
+	.feed-post .post-body:hover a.to-comment{
 		transition:.5s ease-out;
 		display: block;
 	}
@@ -199,7 +205,7 @@ a.to-comment{
 	border-radius: 6px;
 	position: relative;
 }
-	.question-header{
+	.post-header {
 		position: relative;
 		background-color: #fff;
 		min-height: 30px;
@@ -208,7 +214,7 @@ a.to-comment{
 	a.post-title {
 		font-size: 20px;
 	}
-		.question-header a.user{
+		.post-header a.user{
 			margin-right: 10px;
 		    width: auto;
 		    height: auto;
@@ -218,32 +224,30 @@ a.to-comment{
 			color: #777;
 		}
 
-.view .question-body{
+.view .post-body {
 	padding: 0 20px 0 0;
 	/*clear: both; */
 }
 
-.view .question-header{
+.view .post-header {
 	border-bottom: 1px #eee solid;
 	padding-bottom: 10px;
 	padding-left: 0px;
 	padding-right: 0px;
 }
 
-.view .question-header img.img-circle{
+.view .post-header img.img-circle{
 	max-height: 60px;
 }
 
-.view .question-header ul{
-	position: absolute;
-	right:0;
-	bottom: 10px;
+.view .post-header ul{
 	margin: 0;
 }
 
-.view .question-header ul li{
+.view .post-header ul li{
 	display: inline;
 	margin-left: 5px;
+	margin-bottom: auto;
 
 }
 
@@ -256,6 +260,11 @@ a.to-comment{
 	margin-left: 5px;
 }
 */
+
+span.badge{
+	margin: 0.5em;
+}
+
 span.like.badge{
 	background-color: #d9534f;
 }
@@ -269,7 +278,7 @@ span.subscribe.badge{
 }
 
 span.time.badge{
-	background-color: #f0ad4e;
+	/*background-color: #f0ad4e;*/
 }
 
 
@@ -313,7 +322,7 @@ span.time.badge{
 			color: #777;
 		}
 
-.question-body .progress{
+.post-body .progress{
 	margin-top: 20px;
 }
 
