--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -1,56 +1,8 @@
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
+
 {% include "posts/head.html" %}
 <body>
-<nav class="navbar" role="navigation">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="home.html">Squary</a>
-        </div>
-
-        <div class="collapse navbar-collapse navbar-right">
-            <ul class="nav navbar-nav navbar-right center-block">
-                <li>
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                            <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-                                        </span>
-                        </div>
-                    </form>
-                </li>
-
-                <li>
-                    <form action="create.html">
-                        <input value="Create" type="submit" class="btn btn-success navbar-btn">
-                    </form>
-                </li>
-
-                <li>
-                    <img src="jpg/k7BF1vsXveY.jpg" alt="Responsive image" class="img-circle center-block">
-                </li>
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Devernua<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="settings.html">Settings</a></li>
-                        <li><a href="logout.html">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div>
-</nav>
-
+{% include "posts/hut.html" %}
 
 <div class="container" role="main">
     <div class="page-header text-center">
@@ -59,17 +11,18 @@
 
     <div class="row">
         <div class="col-md-10 col-md-offset-1 view">
-            <div class="col-md-7 question-body">
+            <div class="col-md-7 post-body">
                 <img src="{{image.img.url}}" class="photo">
             </div>
             <div class="col-md-5 view-inf">
-                <div class="question-header">
+                <div class="post-header">
                     <a class="user fleft" href="user.html">
                         <img src= "{{image.author.avatar.url}}" alt="Devernua" class="img-circle">
                     </a>
-                    <a class="nickname" href="user.html">{{image.author.username}}</a>
-
-                    <div><ul>
+                    <div>
+                        <a class="nickname" href="user.html">{{image.author.username}}</a>
+                    </div>
+                    <div class="post-menu"><ul>
                         <li><a href="#"><span role="button" class="like badge control">
                             <span class="updatable count">{{image.rating_set.all.count}}</span>
                             <span  class="glyphicon glyphicon-heart"></span>
@@ -91,21 +44,23 @@
                         </span></a></li>
                     </ul></div>
                 </div>
+
+
                 <div class="comment">
-		{% for comment in image.comment_set.all %}
+                {% for comment in image.comment_set.all %}
                     <div class="comment-body">
                         <a href="#" class="nickname">{{comment.author.username}}</a>
                         <span class="comment-text">{{comment.text}}</span>
                         <span href="#" class="comment-meta">{{comment.pdate}}</span>
                     </div>
-		{% endfor %}
+                {% endfor %}
                 </div>
 
-                <div class="answer">
-                    <form role="form" action="answer" method="POST">
-                        <input type="text" class="form-control" placeholder="Input your comment">
-                    </form>
-                </div>
+                {% if user.is_authenticated %}
+                    <div class="answer">
+                        {% include "posts/comment.html" %}
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
