--- a/posts/templates/posts/hut.html
+++ b/posts/templates/posts/hut.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
     <nav class="navbar" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,22 +33,24 @@
                     </li>
 
                     <li>
-                        <img src="{{ user.avatar.url }}" alt="Responsive image" class="img-circle center-block">
+                    <a href="user.html" class="userpic">
+                        <img src="{{user.avatar.url}}" alt="Responsive image" class="img-circle center-block">
+                    </a>
                     </li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="settings.html">Settings</a></li>
-                            <li><a href="logout.html">Logout</a></li>
+                            <li><a href="{% url 'posts:logout' %}">Logout</a></li>
                         </ul>
                     </li>
 		{% else %}
 			<li>	
-				<a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Log In</a>
+				<a href="{% url 'posts:login' %}"><span class="glyphicon glyphicon-log-in"></span> Log In</a>
 			</li>
 			<li>
-				<a href="singup.html"><span class="glyphicon glyphicon-user"></span> Registration</a>
+				<a href="{% url 'posts:signup' %}"><span class="glyphicon glyphicon-user"></span> Registration</a>
 			</li>
 		{% endif %}
                 </ul>
