--- a/posts/templates/posts/hut.html
+++ b/posts/templates/posts/hut.html
@@ -27,7 +27,7 @@
                     </li>
 		{% if user.is_authenticated %}
                     <li>
-                        <form action="create.html">
+                        <form action="{% url 'posts:create' %}">
                             <input value="Create" type="submit" class="btn btn-success navbar-btn">
                         </form>
                     </li>
@@ -41,7 +41,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="settings.html">Settings</a></li>
+                            <li><a href="{% url 'posts:user_edit' user.id %}">Settings</a></li>
                             <li><a href="{% url 'posts:logout' %}">Logout</a></li>
                         </ul>
                     </li>
