--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -19,11 +19,12 @@
 
                     <div class="post-body">
                         <img src="{{image.img.url}}" class="photo">
-
-                        <a class="to-like" href="#">
-                            <span  class="glyphicon glyphicon-heart"></span>
-                        </a>
-
+                        <form action="{% url 'posts:rating' image.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="to-like">
+                                <span  class="glyphicon glyphicon-heart"></span>
+                            </button>
+                        </form>
                         <a class="to-comment" href="{% url 'posts:detail' image.id %}">
                             <span  class="glyphicon glyphicon-comment"></span>
                         </a>
