--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -11,10 +11,10 @@
 		{% for image in latest_image_list %}	
                 <div class="feed-post">
                     <div class="post-header">
-                        <a class="user fleft" href="user.html">
+                        <a class="user fleft" href="{% url 'posts:index_user' image.author.id %}">
                             <img src="{{image.author.avatar.url}}" alt="Devernua" class="img-circle">
                         </a>
-                        <a class="nickname" href="user.html">{{ image.author.username }}</a>
+                        <a class="nickname" href="{% url 'posts:index_user' image.author.id %}">{{ image.author.username }}</a>
                     </div>
 
                     <div class="post-body">
