--- a/posts/templates/posts/hut.html
+++ b/posts/templates/posts/hut.html
@@ -33,7 +33,7 @@
                     </li>
 
                     <li>
-                    <a href="user.html" class="userpic">
+                    <a href="{% url 'posts:index_user' user.id %}" class="userpic">
                         <img src="{{user.avatar.url}}" alt="Responsive image" class="img-circle center-block">
                     </a>
                     </li>
@@ -41,7 +41,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'posts:user_edit' user.id %}">Settings</a></li>
+                            <li><a href="{% url 'posts:settings'%}">Settings</a></li>
                             <li><a href="{% url 'posts:logout' %}">Logout</a></li>
                         </ul>
                     </li>
