--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -15,6 +15,12 @@
                 {% csrf_token %}
 
                     <div class="form-group">
+                        {% for error in form.name.errors %}
+							<p class="text-danger">{{ error }}</p>
+                        {% endfor %}
+
+                        {{ form.name }}
+
                         {% for error in form.img.errors %}
 							<p class="text-danger">{{ error }}</p>
                         {% endfor %}
